--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <title>Dragon Game</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href4="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Dragon Game</h1>
     <h2>Instructions</h2>
     <p>Utilisez les boutons pour attaquer le dragon, vous soigner ou utiliser une attaque spéciale.</p>
     <p>Le dragon vous attaquera également.</p>
-    <p>Vous gagnez si vous éliminez le dragon avant qu'il ne vous élimine.</p>
-    <div class="hearts" id="playerHearts"></div>
-    <div class="hearts" id="dragonHearts"></div>
+    <p>Vous gagnez si vous éliminez le dragon avant qu'il ne vous élimine mais attention le dragon est très trés fort .</p>
+    <div class="hearts" id="playerHearts">
+        <p> PlayerHearts</p>
+    </div>
+    <div class="hearts" id="dragonHearts">
+        <p>DragonHearts</p>
+    </div>
     <button id="attackButton">Attaquer (petite attaque mais précise )</button>
     <button id="healButton">Se soigner ( kit de soin )</button>
     <button id="specialAttackButton1">Attaque du chevalier du zodiaque (grosse attaque destructice)</button>
