--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <audio id="maMusique" controls>
+        <source src="a-long-way-166385.mp3" type="audio/mpeg">
+        Votre navigateur ne supporte pas l'élément audio.
+    </audio>
     <h1>Dragon Game</h1>
     <h2>Instructions</h2>
     <p>Utilisez les boutons pour attaquer le dragon, vous soigner ou utiliser une attaque spéciale.</p>
