--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <p>Le dragon vous attaquera également.</p>
     <p>Vous gagnez si vous éliminez le dragon avant qu'il ne vous élimine mais attention le dragon est très trés fort .</p>
     <div class="hearts" id="playerHearts">
-        <p> PlayerHearts</p>
+        <p> nom </p>
     </div>
     <div class="hearts" id="dragonHearts">
-        <p>DragonHearts</p>
+        <p>Dragon</p>
     </div>
     <button id="attackButton">Attaquer (petite attaque mais précise )</button>
     <button id="healButton">Se soigner ( kit de soin )</button>
